# revtool

./: README.md  pyproject.toml
docs/: gdb.md
revtool/: __init__.py  dynamic.py  emulator.py  strings_util.py
